Save certain events for analytics

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -212,10 +212,6 @@ $item-thumbnail-size: 80px
   flex-direction: column
   justify-content: space-around
   flex: 1
-  padding: 7px 0
-
-  +media-xs
-    padding: 7px
 
   > ul
     margin: 0
@@ -228,7 +224,7 @@ $item-thumbnail-size: 80px
       padding: 0
       display: inline-block
       font-size: $font-size-small
-      padding: 5px 4px
+      padding: 5px 4px 8px
       color: $color-text-light
 
       &:before
