--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -173,9 +173,9 @@ script.
 						'<i class="pi-angle-down"></i>' +
 					'</div>' +
 				'</div>' +
-				'<div class="item-details js-item-open">' +
-					'<a href="{{ url }}" class="item-title">{{ name }}</a>' +
-					'<ul>' +
+				'<div class="item-details">' +
+					'<a href="{{ url }}" class="item-title js-item-open">{{ name }}</a>' +
+					'<ul class="item-meta js-item-open">' +
 						'{{#is_link}}' +
 							'<li class="item-favicon">' +
 								'<a class="js-follow-link" href="{{ link_url }}" target="_blank">' +
