--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -181,3 +181,11 @@ html(lang='en')
 			});
 
 		| {% block footer_scripts %}{% endblock footer_scripts %}
+
+		script.
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', '{{ config.GOOGLE_ANALYTICS_TRACKING_ID }} ', 'auto', {'allowAnchor': true});
+			ga('send', 'pageview');
