--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -54,6 +54,7 @@
       overflow-x: initial
       position: relative
       z-index: 1
+      padding-left: 35px
 
       .item-media
         img
@@ -61,7 +62,7 @@
 
       .item-view
         box-shadow: 0 0 1px 0 rgba($color-background-darker, .2), 1px 1px 5px rgba($color-background-darker, .1), 0 15px 100px rgba($color-background-darker, .2)
-        transform: translateY(15px)
+        transform: translateX(-35px)
 
 #col_main
   +media-lg
