Distinguish between extension_props_public and private
See Pillar user_node_type for more information.

--- a/src/templates/dillo/user.pug
+++ b/src/templates/dillo/user.pug
@@ -93,7 +93,7 @@
 				ul.user-dashboard-meta
 					li
 						strong Karma:
-						| {{ user.extension_props.dillo.karma }}
+						| {{ user.extension_props_public.dillo.karma }}
 					li
 						strong {{ _('Last seen') }}:
 						span.date {{ user._updated }}
