--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -396,22 +396,49 @@ h1 .emoji
   vertical-align: middle
 
 .welcome
-  width: 100%
-  height: 100%
+  +container-box
   display: flex
   flex-direction: column
   align-items: center
+  margin: 8px
 
-  h2
-    padding-top: 25px
+  &-title
+    font-size: 1.8em
+    padding: 35px 15px 5px
+    text-align: center
+
+    .summary
+      color: $color-text-dark-primary
+      cursor: default
+      display: inline-block
+      font-size: $font-size
+      position: relative
+
+  &-extra
+    border-top: thin solid $color-background-dark
+    padding: 15px 15px 25px
+    margin: 15px auto
 
 .flyout.notifications
+  +media-xs
+    bottom: 0
+    box-shadow: none
+    left: 0
+    margin: 0
+    padding: 0
+    position: fixed
+    right: 0
+    top: 0
   top: 40px
 
 
 .d-header
   +media-xs
+    background-image: none
     flex-wrap: wrap
+    flex-direction: column
+    height: 100%
+
   background-color: $color-background-lighter
   box-shadow: 0 1px 3px rgba(black, .1)
   display: flex
@@ -420,6 +447,8 @@ h1 .emoji
   z-index: 2
 
   &-background
+    +media-xs
+      visibility: hidden
     background-color: $color-background-dark
     background-size: cover
     height: 100%
@@ -476,7 +505,12 @@ h1 .emoji
 
 /* General style for activities in all places */
 .d-activity
-  font-size: .85em
+  border-top: thin solid $color-background-dark
+  padding: 15px 15px 25px
+
+  .title
+    color: $color-text-dark-primary
+    padding-bottom: 15px
 
   $activity-highlight-color: #00cc9f
   ul
@@ -487,8 +521,15 @@ h1 .emoji
     list-style: none
 
     li
-      padding: 2px 5px 5px 25px
+      padding: 2px 5px 7px 25px
       position: relative
+
+      a
+        color: $color-text-dark-primary
+        text-decoration: none
+
+        &:hover
+          text-decoration: underline
 
       span.date
         color: darken($activity-highlight-color, 5%)
@@ -496,17 +537,13 @@ h1 .emoji
       /* Left Dot */
       &:after
         content: ''
-        display: block
         position: absolute
         top: 0
         left: 0
-        width: 16px
-        height: 16px
-        border-radius: 50%
+        width: 18px
+        height: 18px
         background-color: $activity-highlight-color
         border: thin solid $activity-highlight-color
-        transition: all 250ms ease-in-out
-        z-index: 0
 
       /* Left Line */
       &:before
@@ -514,8 +551,8 @@ h1 .emoji
         display: block
         position: absolute
         top: 10px
-        left: 8px
-        width: 1px
+        left: 9px
+        width: 2px
         height: 100%
         background-color: $activity-highlight-color
         transition: all 250ms ease-in-out
@@ -529,10 +566,8 @@ h1 .emoji
       color: $color-text-dark
 
     img.actor-avatar
-      width: 16px
-      height: 16px
-      border-radius: 50%
-      margin-right: 5px
+      width: 18px
+      height: 18px
       position: absolute
       top: 1px
       left: 1px
