--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -29,6 +29,6 @@ $color-vote-down: #74a4ff
 $color-type-link: #C7E877
 $color-type-text: #77E8D7
 
-$header-bar-pri-size: 46px
+$header-height: 42px
 
 $widget-min-height: 30px
