--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -4,10 +4,11 @@
   .list-hits-item
     +clearfix
     +media-xs
-      border-radius: 2px
-      flex-direction: column
-      margin: 10px
-      padding-right: 0
+      border-radius: 0
+      flex-direction: row-reverse
+      margin: 0
+      box-shadow: inset 0 1px $color-background-dark
+
 
     background-color: $color-background-lighter
     border-radius: 3px
@@ -21,6 +22,8 @@
 
     // Triangle on the right
     &:after
+      +media-xs
+        display: none
       opacity: 0
       right: -8px
       transition: opacity 300ms ease-in-out, right 300ms ease-in-out
@@ -28,7 +31,8 @@
 
     &.active
       +media-xs
-        box-shadow: 1px 2px 2px $color-background-dark, 0 -5px 0  $color-secondary
+        background-color: $color-background-light
+        box-shadow: 1px 2px 2px $color-background-dark, inset 5px 0 0  $color-secondary
       box-shadow: 1px 2px 2px $color-background-dark, inset -4px 0 0  $color-secondary
       background-color: $color-background-lighter
 
@@ -69,14 +73,12 @@
 
       +media-xs
         ul
-          flex-wrap: wrap
           li
-            display: block
             font-size: .8em
-            a
-              white-space: initial
 
     a.item-title
+      +media-xs
+        font-size: 1em
       color: $color-text
       font-size: 1.1em
       padding: 8px 10px 5px 0
@@ -85,6 +87,8 @@
         color: $color-primary
 
     .item-author
+      +media-xs
+        display: none
       +media-sm
         max-width: 50px
         white-space: nowrap
@@ -136,6 +140,9 @@
     padding: 10px 0
 
   .item-title
+    +media-xs
+      font-size: $font-size * 1.2
+
     color: $color-primary
     font-size: $font-size-extra-large
 
@@ -144,9 +151,15 @@
       width: $font-size-large
 
   .item-rating-box
+    +media-xs
+      min-width: 50px
     min-width: 65px
 
   .item-details
+    +media-xs
+      ul li
+        font-size: .8em
+
     padding: 5px 0
 
 
