--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -45,10 +45,16 @@ html(lang='en')
 				.d-header-background(
 					style="background-image: url({{ project.picture_header.thumbnail('h') }});")
 				| {% endif %}
-				a.d-header-logo(href="{{ url_for('posts.index', community_url=project.url) }}")
-					| {% if project.picture_square %}
+
+				| {% if project.picture_square %}
+				a.d-header-logo(
+					href="{{ url_for('posts.index', community_url=project.url) }}")
 					img(src="{{ project.picture_square.thumbnail('l') }}")
-					| {% endif %}
+				| {% else %}
+				a.d-header-logo.no-logo(
+					href="{{ url_for('posts.index', community_url=project.url) }}")
+					i.pi-grin
+				| {% endif %}
 
 				.d-header-title
 					a.title(href="{{ url_for('posts.index', community_url=project.url) }}")
