--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -280,7 +280,7 @@ button, .btn
       bottom: 15px
       box-shadow: 0 0 25px rgba(black, .2)
       position: fixed
-      right: 20px
+      right: 10px
 
       .dropdown-menu
         top: -125%
@@ -486,10 +486,11 @@ h1 .emoji
 
 .welcome
   +container-box
+  align-items: center
   display: flex
   flex-direction: column
-  align-items: center
   margin: 8px
+  padding: 0 25px
 
   &-title
     font-size: 1.8em
@@ -507,6 +508,7 @@ h1 .emoji
     border-top: thin solid $color-background-dark
     padding: 15px 15px 25px
     margin: 15px auto
+    max-width: 600px
 
 .flyout.notifications
   +media-xs
