Display spinner when loading a post

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -640,3 +640,8 @@ body[data-context="post-edit"]
       &.up, &.down
         pointer-events: none
         color: rgba($color-text-dark-hint, .6)
+
+.item-loading
+  +position-center-translate
+  color: $color-background-dark
+  font-size: 4em
