--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -642,6 +642,9 @@ body[data-context="post-edit"]
         color: rgba($color-text-dark-hint, .6)
 
 .item-loading
-  +position-center-translate
   color: $color-background-dark
   font-size: 4em
+  left: 50%
+  position: fixed
+  top: 50%
+  transform: translate(-50%, -50%)
