Colons should be outside of to-be-translated string

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -103,7 +103,7 @@ li
 				| {{ project.description | markdown }}
 
 			.d-activity
-				.title {{ _('What\'s going on:') }}
+				.title {{ _('What\'s going on') }}:
 
 				| {% if col_right['activities']['_meta']['total'] %}
 				ul
