Sass: Split global configuration into its own file
In preparation for alternative dark theme

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,5 +1,6 @@
 // First load Pillar's config as fallback, then Dillo's
 @import ../../../pillar/src/styles/_config
+@import _config_global
 @import _config
 
 @import ../../../pillar/src/styles/_utils
